# aigit

./: .gitignore  INSTALL.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
aigit/: __init__.py  cli.py  config.py  prompts.py
aigit/commands/: __init__.py  branch.py  commit.py  config.py  explain.py  pr.py  review.py
aigit/services/: __init__.py  ai.py  git.py  github.py
