[project]
name = "aigit"
version = "0.1.2"
description = "AI-powered Git CLI tool for smart commits, branches, and PRs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "gitpython>=3.1.0",
    "pygithub>=2.1.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
aigit = "aigit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aigit"]

